[project]
name = "fastapi-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt>=5.0.0",
    "datetime>=6.0",
    "fastapi[standard]>=0.136.1",
    "passlib>=1.7.4",
    "pydantic>=2.13.3",
    "python-jose[cryptography]>=3.5.0",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
    "typing>=3.10.0.0",
    "uvicorn>=0.46.0",
]
